<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/fondo"
        android:layout_width="1000dp"
        android:layout_height="match_parent"
        android:alpha="0.68"
        android:contentDescription="@string/background_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_login" />

    <ImageView
        android:id="@+id/logotipo"
        android:layout_width="202dp"
        android:layout_height="154dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="265dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:onClick="conecta"
        android:text="@string/action_sign_in"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPass" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="265dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="123456789"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsuario"
        app:layout_constraintVertical_bias="0.48000002" />

    <EditText
        android:id="@+id/editUsuario"
        android:layout_width="265dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:text="alex1"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logotipo"
        app:layout_constraintVertical_bias="0.236" />

</androidx.constraintlayout.widget.ConstraintLayout>