<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/azulOscuro"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/naranjaClaro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/tvBienvenida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/naranjaOscuro" />

            <ImageButton
                android:id="@+id/ibUsuario"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="#00FFFFFF"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/editUser"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_baseline_person_24" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/naranjaClaro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/tvBuscarRestaurante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/searchRestaurant"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/naranjaOscuro" />

            <ImageButton
                android:id="@+id/ibBuscarRestaurante"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="#00FFFFFF"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/searchHelp"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_baseline_search_24" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/naranjaClaro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/tvUltimasReservas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:text="@string/lastBooking"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/naranjaOscuro"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReservas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/naranjaClaro" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>