<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulOscuro"
    tools:context=".ui.restaurant.RestaurantActivity">

    <TextView
        android:id="@+id/tvNombreRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/naranjaClaro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreRest" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivCabecera"
                    android:layout_width="456dp"
                    android:layout_height="165dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/rest_header" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="150dp"
                    android:layout_marginTop="-100dp"
                    android:layout_marginEnd="150dp"
                    android:layout_marginBottom="145dp"
                    android:background="#FFFFFF"
                    android:baselineAlignBottom="false"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_fork_and_knife_cutlery_circle_interface_symbol_for_restaurant_svgrepo_com" />

            </RelativeLayout>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/pickDate"
                android:textAlignment="center"
                android:textColor="@color/naranjaClaro"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etFechaHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/azulClaro"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/pickDate"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/naranjaOscuro" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/pickHour"
                android:textAlignment="center"
                android:textColor="@color/naranjaClaro"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/spinnerHoras"
                android:theme="@style/spinnerCustom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/azulClaro"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvNumeroPersonas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/peopleCount"
                android:textAlignment="center"
                android:textColor="@color/naranjaClaro"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/etNumComensal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@color/azulClaro"
                android:layout_margin="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:inputType="number"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/naranjaOscuro"/>

            <Button
                android:id="@+id/btBookit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-thin"
                android:padding="15dp"
                android:text="@string/bookit"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>